tests/invalid/Function_Invalid_9.whiley

function f(int x) -> int
requires x >= 0:
    return x

function f(int x) -> int
requires x >= 0:
    return x
